--- a/game.html
+++ b/game.html
@@ -139,7 +139,7 @@
     function showSchlafzimmerCloset() {
       let narrative = `
         <h2>Schlafzimmer – Kleiderschrank</h2>
-        <img src="schlafzimmer.jpg" alt="Kleiderschrank">
+        <img src="monster.jpg" alt="Kleiderschrank">
         <p>Du öffnest den alten Kleiderschrank – plötzlich schwingt sich ein furchterregendes Monster hervor, das dich hineinzerrt und zerfleischt.</p>
       `;
       displayScene(narrative, [
@@ -224,7 +224,7 @@
     function showSchriftrolle() {
       let narrative = `
         <h2>Wohnzimmer – Schriftrolle</h2>
-        <img src="wohnzimmer.jpg" alt="Schriftrolle">
+        <img src="schriftrolle.jpg" alt="Schriftrolle">
         <p>Die alte Schriftrolle liegt auf dem Tisch. Was möchtest du tun?</p>
       `;
       let options = [
